# cuboxGPT

./: .gitignore  README.md  chat.py  chatFromDB.py  chromadbHelper.py  cuboxGPT.py  db.py  pyproject.toml  requirements.txt  setup.py  webParser.py
